# gromacs

./: CMakeLists.txt
admin/ci-scripts/: build-and-test-py-gmxapi.sh  build-and-test-sample_restraint.sh  gromacs-base-test.sh
admin/containers/: buildall.sh
admin/gitlab-ci/: gromacs.matrix.gitlab-ci.yml
admin/gitlab-ci/gromacs.matrix/: gromacs.gcc-11-cuda-11.7.1-nvshmem.gitlab-ci.yml  gromacs.hipsycl-0.9.4.gitlab-ci.yml  gromacs.oneapi-2023.0.0-amd-nightly.gitlab-ci.yml  gromacs.oneapi-2023.1.0-opencl-release.gitlab-ci.yml  gromacs.oneapi-2023.1.0-opencl.gitlab-ci.yml  gromacs.oneapi-2023.1.0-sycl.gitlab-ci.yml
api/legacy/include/gromacs/topology/: symtab.h
cmake/: gmxCFlags.cmake  gmxManageCuda.cmake  gmxManageFFTLibraries.cmake  gmxManageMPI.cmake  gmxManageNvshmem.cmake  gmxManageSYCL.cmake
docs/: CMakeLists.txt  conf.cmakein.py
docs/gmxapi/userguide/: install.rst  usage.rst
docs/install-guide/: index.rst
docs/reference-manual/special/: awh.rst
docs/release-notes/2023/: 2023.1.rst
docs/release-notes/2023/major/: bugs-fixed.rst
docs/release-notes/2024/major/: bugs-fixed.rst
docs/user-guide/: mdp-options.rst
python_packaging/gmxapi/: CMakeLists.txt  pyproject.toml
python_packaging/gmxapi/src/gmxapi/: commandline.py  runtime.py
python_packaging/gmxapi/test/: conftest.py
src/gromacs/: CMakeLists.txt
src/gromacs/applied_forces/awh/: biasstate.cpp  histogramsize.h
src/gromacs/domdec/: distribute.cpp  domdec.cpp  domdec_internal.h  localtopologychecker.cpp  makebondedlinks.cpp  partition.cpp  partition.h  redistribute.cpp
src/gromacs/domdec/tests/: haloexchange_mpi.cpp
src/gromacs/essentialdynamics/: edsam.cpp
src/gromacs/ewald/: pme.cpp  pme_gather_sycl.cpp  pme_gpu.cpp  pme_gpu_grid_sycl.cpp  pme_gpu_internal.cpp  pme_solve_sycl.cpp  pme_spread_sycl.cpp
src/gromacs/fft/: gpu_3dfft.cpp
src/gromacs/fft/tests/: fft_mpi.cpp
src/gromacs/fileio/: tngio.cpp  tpxio.cpp
src/gromacs/gmxana/: gmx_bar.cpp  gmx_chi.cpp  gmx_hbond.cpp  gmx_wham.cpp
src/gromacs/gmxlib/nonbonded/: nb_free_energy.cpp
src/gromacs/gmxpreprocess/: grompp.cpp  pdb2gmx.cpp  readir.cpp  vsite_parm.cpp
src/gromacs/gmxpreprocess/tests/refdata/: GetIrTest_AcceptsDefineParametersWithValuesIncludingAssignment.xml  GetIrTest_AcceptsElectricField.xml  GetIrTest_AcceptsElectricFieldOscillating.xml  GetIrTest_AcceptsElectricFieldPulsed.xml  GetIrTest_AcceptsEmptyLines.xml  GetIrTest_AcceptsMimic.xml  (+1 more)
src/gromacs/gpu_utils/: devicebuffer.cuh  devicebuffer_ocl.h
src/gromacs/gpu_utils/tests/: nvshmem_simple_put.cu  nvshmem_simple_put.cuh  nvshmem_test.cpp
src/gromacs/listed_forces/: listed_forces_gpu_impl_gpu.cpp
src/gromacs/math/: neldermead.cpp
src/gromacs/mdlib/: boxdeformation.cpp  boxdeformation.h  calc_verletbuf.cpp  force.h  md_support.cpp  mdoutf.cpp  membed.cpp  sim_util.cpp  update.cpp
src/gromacs/mdrun/: isimulator.h  md.cpp  mimic.cpp  minimize.cpp  rerun.cpp  runner.cpp  shellfc.cpp  tpi.cpp
src/gromacs/mdrunutility/: mdmodulesnotifiers.h
src/gromacs/mdtypes/: group.cpp  group.h  inputrec.cpp
src/gromacs/mdtypes/tests/: CMakeLists.txt
src/gromacs/modularsimulator/: computeglobalselement.cpp  forceelement.cpp  propagator.cpp  simulatoralgorithm.cpp
src/gromacs/nbnxm/: freeenergydispatch.cpp  nbnxm.h  pairlist.cpp  pairlist.h  pairlistwork.cpp  prunekerneldispatch.cpp
src/gromacs/nbnxm/cuda/: nbnxm_cuda.cu
src/gromacs/nbnxm/tests/: CMakeLists.txt  exclusions.cpp
src/gromacs/pbcutil/: pbc.cpp
src/gromacs/pulling/: pull.cpp  pull_internal.h  pull_rotation.cpp  pullutil.cpp
src/gromacs/pulling/tests/: pull.cpp
src/gromacs/taskassignment/: decidegpuusage.cpp
src/gromacs/timing/: wallcycle.cpp
src/gromacs/topology/: index.cpp
src/gromacs/utility/: binaryinformation.cpp  template_mp.h
src/gromacs/utility/tests/: template_mp.cpp
src/programs/mdrun/tests/: CMakeLists.txt  boxdeformation.cpp  multiple_time_stepping.cpp  pull_rotation.cpp
src/testutils/: TestMacros.cmake
(+2 files in other folders)
